--- a/css/main.css
+++ b/css/main.css
@@ -765,25 +765,6 @@ li {
           transform: translateY(-50%);
 }
 
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  padding-left: 39px;
-  padding-right: 41px;
-  min-width: 528px;
-  min-height: 581px;
-  text-align: center;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  background: #ffffff;
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-}
-
 .modal-button {
   position: absolute;
   top: 8px;
@@ -831,6 +812,7 @@ li {
   position: absolute;
   top: 50%;
   left: 50%;
+  z-index: 120;
   padding-top: 40px;
   padding-bottom: 40px;
   padding-left: 39px;
@@ -844,10 +826,24 @@ li {
   border-radius: 4px;
 }
 
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .modal {
+    min-height: 609px;
+    min-width: 450px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .modal {
-    min-width: 528px;
-    min-height: 581px;
+    max-width: 450px;
+    max-height: 609px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-width: 528px;
+    max-height: 581px;
   }
 }
 
@@ -858,6 +854,19 @@ li {
   letter-spacing: 0.03em;
   margin-bottom: 12px;
   color: #212121;
+}
+
+@media screen and (max-width: 767px) {
+  .signup__headline {
+    font-weight: bold;
+    line-height: 1.5;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .signup__headline {
+    line-height: 1.15;
+  }
 }
 
 .signup__form {
@@ -985,9 +994,21 @@ li {
 }
 
 .checkbx {
-  font-size: 14px;
-  line-height: 1.714;
   letter-spacing: 0.03em;
+}
+
+@media screen and (max-width: 767px) {
+  .checkbx {
+    font-size: 12px;
+    line-height: 1.666;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .checkbx {
+    font-size: 14px;
+    line-height: 1.714;
+  }
 }
 
 .checkbox {
@@ -1008,11 +1029,22 @@ li {
 }
 
 .checkbox__icon {
-  display: inline-block;
-  margin: 5px 5px 7px 13px;
+  display: block;
   border: 2px solid #2a2a2a;
   border-radius: 2px;
   cursor: pointer;
+}
+
+@media screen and (max-width: 767px) {
+  .checkbox__icon {
+    margin: 5px 5px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .checkbox__icon {
+    margin: 5px 5px 7px 13px;
+  }
 }
 
 .checkbox__icon .checkbox__svg {
@@ -1028,7 +1060,9 @@ li {
 }
 
 .checkbox__span {
-  display: block;
+  display: inline-block;
+  padding: 0;
+  margin: 0;
 }
 
 .checkbox__link {
@@ -2211,6 +2245,7 @@ li {
   width: 100vw;
   height: 100vh;
   padding: 40px 48px;
+  z-index: 100;
   background-color: #ffffff;
   -webkit-transform: translateX(0);
           transform: translateX(0);
