--- a/sass — копия/components/_modal.scss
+++ b/sass — копия/components/_modal.scss
@@ -8,6 +8,15 @@
   opacity: 1;
   visibility: visible;
   transition: opacity $timing-fm, visibility $timing-fm;
+
+  @media screen and (max-width: 767px) {
+  }
+
+  @media screen and (min-width: $tablet) {
+  }
+
+  @media screen and (min-width: $decstop) {
+  }
 }
 .is-hidden {
   visibility: hidden;
@@ -24,23 +33,50 @@
   padding-bottom: 40px;
   padding-left: 39px;
   padding-right: 41px;
-  min-width: 528px;
-  min-height: 581px;
+
   text-align: center;
   transform: translate(-50%, -50%);
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  z-index: 120;
+  @media screen and (max-width: 767px) {
+    min-height: 609px;
+    width: 450px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    max-width: 450px;
+    max-height: 609px;
+  }
+
+  @media screen and (min-width: $decstop) {
+    max-width: 528px;
+    max-height: 581px;
+  }
 }
 
 .signup__headline {
   display: inline-block;
   font-size: 20px;
-  line-height: 1.15;
+
   letter-spacing: 0.03em;
   margin-bottom: 12px;
   color: $title-text-color;
+  @media screen and (max-width: 767px) {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 1.5;
+    letter-spacing: 0.03em;
+  }
+
+  @media screen and (min-width: $tablet) {
+    line-height: 1.15;
+  }
+
+  @media screen and (min-width: $decstop) {
+  }
 }
 .signup__form {
   font-size: 12px;
@@ -126,9 +162,20 @@
 .checkbx {
   // display: block;
 
-  font-size: 14px;
-  line-height: 1.714;
   letter-spacing: 0.03em;
+
+  @media screen and (max-width: 767px) {
+    font-size: 12px;
+    line-height: 1.666;
+  }
+
+  @media screen and (min-width: $tablet) {
+    font-size: 14px;
+    line-height: 1.714;
+  }
+
+  @media screen and (min-width: $decstop) {
+  }
 }
 
 .checkbox {
