--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -19,7 +19,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-
+  z-index: 120;
   padding-top: 40px;
   padding-bottom: 40px;
   padding-left: 39px;
@@ -32,17 +32,19 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    min-height: 609px;
+    min-width: 450px;
   }
 
   @media screen and (min-width: $tablet) {
-    min-width: 528px;
-    min-height: 581px;
+    max-width: 450px;
+    max-height: 609px;
   }
 
   @media screen and (min-width: $decstop) {
-    // min-width: 528px;
-    // min-height: 581px;
+    max-width: 528px;
+    max-height: 581px;
   }
 }
 
@@ -53,6 +55,19 @@
   letter-spacing: 0.03em;
   margin-bottom: 12px;
   color: $title-text-color;
+
+  @media screen and (max-width: 767px) {
+    font-weight: bold;
+
+    line-height: 1.5;
+  }
+
+  @media screen and (min-width: $tablet) {
+    line-height: 1.15;
+  }
+
+  @media screen and (min-width: $decstop) {
+  }
 }
 .signup__form {
   font-size: 12px;
@@ -138,9 +153,19 @@
 .checkbx {
   // display: block;
 
-  font-size: 14px;
-  line-height: 1.714;
   letter-spacing: 0.03em;
+  @media screen and (max-width: 767px) {
+    font-size: 12px;
+    line-height: 1.666;
+  }
+
+  @media screen and (min-width: $tablet) {
+    font-size: 14px;
+    line-height: 1.714;
+  }
+
+  @media screen and (min-width: $decstop) {
+  }
 }
 
 .checkbox {
@@ -160,11 +185,22 @@
 // }
 
 .checkbox__icon {
-  display: inline-block;
-  margin: 5px 5px 7px 13px;
+  display: block;
+
   border: 2px solid #2a2a2a;
   border-radius: 2px;
   cursor: pointer;
+
+  @media screen and (max-width: 767px) {
+    margin: 5px 5px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    margin: 5px 5px 7px 13px;
+  }
+
+  @media screen and (min-width: $decstop) {
+  }
 
   & .checkbox__svg {
     display: none;
@@ -179,7 +215,9 @@
 }
 
 .checkbox__span {
-  display: block;
+  display: inline-block;
+  padding: 0;
+  margin: 0;
 }
 .checkbox__link {
   color: $accent-color;
