--- a/sass/components/_toggle.scss
+++ b/sass/components/_toggle.scss
@@ -38,7 +38,7 @@
   width: 100vw;
   height: 100vh;
   padding: 40px 48px;
-
+  z-index: 100;
   background-color: #ffffff;
   transform: translateX(0);
   transition: transform $timing-fm;
